--- a/react-app/Documentation/css/light-bootstrap-dashboard.css
+++ b/react-app/Documentation/css/light-bootstrap-dashboard.css
@@ -1361,7 +1361,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   .navbar .btn-simple {
     font-size: 16px; }
   .navbar.fixed {
-    width: calc(100% - 260px);
+    width: calc(100% - $sidebar-width);
     right: 0;
     left: auto;
     border-radius: 0; }
