--- a/react-app/src/assets/css/light-bootstrap-dashboard-react.css
+++ b/react-app/src/assets/css/light-bootstrap-dashboard-react.css
@@ -422,7 +422,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   background: rgba(203, 203, 210, 0.15);
   position: relative;
   float: right;
-  width: 260px; }
+  width: calc(100% - 260px); }
   .main-panel > .content {
     padding: 30px 15px;
     min-height: calc(100% - 123px); }
@@ -1361,7 +1361,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   .navbar .btn-simple {
     font-size: 16px; }
   .navbar.fixed {
-    width: calc(100% - 260px);
+    width: calc(100% - $sidebar-width);
     right: 0;
     left: auto;
     border-radius: 0; }
@@ -2986,3 +2986,5 @@ body > .navbar-collapse[data-color="purple"]:after {
     overflow-y: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     -webkit-overflow-scrolling: touch; } }
+
+/*# sourceMappingURL=light-bootstrap-dashboard-react.css.map */
