--- a/react-app/src/assets/css/light-bootstrap-dashboard-react.css
+++ b/react-app/src/assets/css/light-bootstrap-dashboard-react.css
@@ -1361,7 +1361,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   .navbar .btn-simple {
     font-size: 16px; }
   .navbar.fixed {
-    width: calc(100% - $sidebar-width);
+    width: calc(100% - calc(100% - 260px));
     right: 0;
     left: auto;
     border-radius: 0; }
@@ -1871,7 +1871,7 @@ body > .navbar-collapse[data-color="purple"]:after {
     line-height: 59px; }
 
 .card-stats .numbers {
-  font-size: 2em;
+  font-size: 1.5em;
   text-align: right; }
   .card-stats .numbers p {
     margin: 0; }
